- updated header logo size on breakpoint, to avoid issue with text overlapping

--- a/src/styles/modules/_header.scss
+++ b/src/styles/modules/_header.scss
@@ -10,7 +10,7 @@ header {
 
     img {
 
-      @media ($breakpointMedium2Max) {
+      @media (max-width: 840px) {//width of logo image
         width: 100%;
       }
     }
